# api/auth/schema.go
@@ -3,11 +3,17 @@ package auth
 import "github.com/cnpythongo/goal-tools/utils"
 
 type (
+	CaptchaStruct struct {
+		CaptchaId     string `json:"captcha_id" form:"captcha_id" binding:"required"`                     // 验证码ID
+		CaptchaAnswer string `json:"captcha_answer" form:"captcha_answer" binding:"required,min=6,max=6"` // 验证码,4位
+	}
+
 	// ReqUserAuth 用户登录接口请求数据结构
 	ReqUserAuth struct {
 		// Phone    string `json:"phone" binding:"required" example:"13800138000"` // 手机号
 		Email    string `json:"email" binding:"required" example:"foo@bar.com"` // 邮箱
 		Password string `json:"password" binding:"required" example:"123456"`   // 密码
+		CaptchaStruct
 	}
 
 	// RespUserInfo 用户登录接口返回的用户信息数据结构
@@ -27,10 +33,23 @@ type (
 		User       RespUserInfo `json:"user"`        // 用户基本信息
 	}
 
-	ReqUserSignup struct {
+	// ReqAuthSignup 用户注册接口数据结构
+	ReqAuthSignup struct {
 		// Phone    string `json:"phone" binding:"required" example:"13800138000"` // 手机号
 		Email           string `json:"email" example:"foo@bar.com"`                          // 邮箱
 		Password        string `json:"password" binding:"required" example:"123456"`         // 密码
 		ConfirmPassword string `json:"confirm_password" binding:"required" example:"123456"` // 确认密码
+		CaptchaStruct
+	}
+
+	// ReqAuthCaptcha 验证码接口请求参数
+	ReqAuthCaptcha struct {
+		TS string `form:"ts"` // 时间戳字符串，避免缓存
+	}
+
+	// RespAuthCaptcha 验证码接口返回的数据结构
+	RespAuthCaptcha struct {
+		CaptchaId  string `json:"captcha_id"`  // 验证码ID
+		CaptchaImg string `json:"captcha_img"` // base64编码的验证码图片
 	}
 )
