# model/redis/redis.go
@@ -1,198 +1,250 @@
 package redis
 
 import (
-	"errors"
+	"bufio"
+	"context"
 	"fmt"
+	"github.com/redis/go-redis/v9"
 	"goal-app/pkg/config"
+	"goal-app/pkg/log"
+	"strings"
 	"time"
-
-	"github.com/gomodule/redigo/redis"
 )
 
-var (
-	redisPool       *redis.Pool
-	redisNotInitErr = errors.New("redis is not initialized.")
-	KeyNotExist     = errors.New("key does not exist")
-)
+var RedisPrefix = "Goal:"
+var redisClient *redis.Client
+var RedisUtil *redisUtil
 
-func Init(cfg *config.RedisConfig) error {
-	url := fmt.Sprintf("%s:%d", cfg.Host, cfg.Port)
-	redisPool = &redis.Pool{
-		MaxIdle:     cfg.MaxIdle,
-		MaxActive:   cfg.MaxActive,
-		IdleTimeout: 20 * time.Second,
-		Dial: func() (redis.Conn, error) {
-			c, err := redis.Dial("tcp", url)
-			if err != nil {
-				return nil, err
-			}
-			if cfg.Auth != "" {
-				_, err = c.Do("AUTH", cfg.Auth)
-				if err != nil {
-					return nil, err
-				}
-			}
-			_, err = c.Do("SELECT", cfg.Db)
-			if err != nil {
-				return nil, err
-			}
-			return c, nil
-		},
-	}
-	return nil
+// redisUtil Redis操作工具类
+type redisUtil struct {
+	redis *redis.Client
 }
 
-func Get(key string) ([]byte, error) {
-	if redisPool == nil {
-		return nil, redisNotInitErr
+func GetRedis() *redis.Client {
+	if redisClient == nil {
+		panic("redis not inited")
 	}
-	c := redisPool.Get()
-	defer c.Close()
+	return redisClient
+}
 
-	reply, err := c.Do("GET", key)
+// Init 初始化redis客户端
+func Init() *redis.Client {
+	cfg := config.GetConfig().Redis
+	opt, err := redis.ParseURL(fmt.Sprintf("redis://%s:%d", cfg.Host, cfg.Port))
 	if err != nil {
-		return nil, err
-	}
-	val, ok := reply.([]byte)
-	if ok {
-		return []byte(val), nil
-	}
-	return val, KeyNotExist
-}
-
-func Set(key string, ttl int64, value []byte) error {
-	if redisPool == nil {
-		return redisNotInitErr
-	}
-	c := redisPool.Get()
-	defer c.Close()
-	if _, err := c.Do("set", key, value); err != nil {
-		return err
-	}
-	if ttl > 0 {
-		if _, err := c.Do("expire", key, ttl); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-func Del(key string) error {
-	if redisPool == nil {
-		return redisNotInitErr
-	}
-	c := redisPool.Get()
-	defer c.Close()
-	_, err := c.Do("del", key)
-	return err
-}
-
-func Exist(key string) bool {
-	if redisPool == nil {
-		panic(nil)
-	}
-	c := redisPool.Get()
-	defer c.Close()
-
-	exist, err := redis.Bool(c.Do("EXISTS", key))
-	if err != nil {
+		log.GetLogger().Fatal("initRedis redis.ParseURL err: ", err)
 		panic(err)
 	}
-	return exist
+	opt.Password = cfg.Auth
+	opt.MaxIdleConns = cfg.MaxIdle
+	opt.MaxActiveConns = cfg.MaxActive
+	opt.PoolSize = 100
+
+	redisClient = redis.NewClient(opt)
+	ctx, cancel := context.WithTimeout(context.Background(), 3*time.Second)
+	defer cancel()
+
+	_, err = redisClient.Ping(ctx).Result()
+	if err != nil {
+		log.GetLogger().Fatal("initRedis client.Ping err: ", err)
+		panic(err)
+	}
+
+	RedisUtil = &redisUtil{redis: redisClient}
+	return redisClient
 }
 
-func HSet(key string, values map[string][]byte, ttl int64) error {
-	if redisPool == nil {
-		panic(nil)
+// stringToLines string拆分多行
+func stringToLines(s string) (lines []string, err error) {
+	scanner := bufio.NewScanner(strings.NewReader(s))
+	for scanner.Scan() {
+		lines = append(lines, scanner.Text())
 	}
-	c := redisPool.Get()
-	defer c.Close()
-	var redisValues []interface{}
-	redisValues = append(redisValues, key)
-	for k, v := range values {
-		redisValues = append(redisValues, k)
-		redisValues = append(redisValues, v)
+	err = scanner.Err()
+	return
+}
+
+// stringToKV string拆分key和val
+func stringToKV(s string) (string, string) {
+	ss := strings.Split(s, ":")
+	if len(ss) < 2 {
+		return s, ""
 	}
-	_, err := c.Do("HMSET", redisValues...)
-	if err == nil && ttl > 0 {
-		if _, err := c.Do("expire", key, ttl); err != nil {
-			return err
+	return ss[0], ss[1]
+}
+
+// Info Redis服务信息
+func (ru redisUtil) Info(sections ...string) (res map[string]string) {
+	infoStr, err := ru.redis.Info(context.Background(), sections...).Result()
+	res = map[string]string{}
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Info err: err=[%+v]", err)
+		return res
+	}
+	// string拆分多行
+	lines, err := stringToLines(infoStr)
+	if err != nil {
+		log.GetLogger().Errorf("stringToLines err: err=[%+v]", err)
+		return res
+	}
+	// 解析成Map
+	for i := 0; i < len(lines); i++ {
+		if lines[i] == "" || strings.HasPrefix(lines[i], "# ") {
+			continue
+		}
+		k, v := stringToKV(lines[i])
+		res[k] = v
+	}
+	return res
+}
+
+// DBSize 当前数据库key数量
+func (ru redisUtil) DBSize() int64 {
+	size, err := ru.redis.DBSize(context.Background()).Result()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.DBSize err: err=[%+v]", err)
+		return 0
+	}
+	return size
+}
+
+// Set 设置键值对
+func (ru redisUtil) Set(key string, value interface{}, timeSec int) bool {
+	err := ru.redis.Set(context.Background(),
+		RedisPrefix+key, value, time.Duration(timeSec)*time.Second).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Set err: err=[%+v]", err)
+		return false
+	}
+	return true
+}
+
+// Get 获取key的值
+func (ru redisUtil) Get(key string) string {
+	res, err := ru.redis.Get(context.Background(), RedisPrefix+key).Result()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Get err: err=[%+v]", err)
+		return ""
+	}
+	return res
+}
+
+// SSet 将数据放入set缓存
+func (ru redisUtil) SSet(key string, values ...interface{}) bool {
+	err := ru.redis.SAdd(context.Background(), RedisPrefix+key, values...).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.SSet err: err=[%+v]", err)
+		return false
+	}
+	return true
+}
+
+// SGet 根据key获取Set中的所有值
+func (ru redisUtil) SGet(key string) []string {
+	res, err := ru.redis.SMembers(context.Background(), RedisPrefix+key).Result()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.SGet err: err=[%+v]", err)
+		return []string{}
+	}
+	return res
+}
+
+// HMSet 设置key, 通过字典的方式设置多个field, value对
+func (ru redisUtil) HMSet(key string, mapping map[string]string, timeSec int) bool {
+	err := ru.redis.HSet(context.Background(), RedisPrefix+key, mapping).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.HMSet err: err=[%+v]", err)
+		return false
+	}
+	if timeSec > 0 {
+		if !ru.Expire(key, timeSec) {
+			return false
 		}
 	}
-	return err
+	return true
 }
 
-func HGet(key string, vkeys ...string) (map[string][]byte, error) {
-	if redisPool == nil {
-		panic(nil)
-	}
-	c := redisPool.Get()
-	defer c.Close()
+// HSet 向hash表中放入数据,如果不存在将创建
+func (ru redisUtil) HSet(key string, field string, value string, timeSec int) bool {
+	return ru.HMSet(key, map[string]string{field: value}, timeSec)
+}
 
-	result := make(map[string][]byte)
-	var redisKeys []interface{}
-	redisKeys = append(redisKeys, key)
-	for _, vk := range vkeys {
-		redisKeys = append(redisKeys, vk)
-	}
-	values, err := redis.Values(c.Do("HMGET", redisKeys...))
+// HGet 获取key中field域的值
+func (ru redisUtil) HGet(key string, field string) string {
+	res, err := ru.redis.HGet(context.Background(), RedisPrefix+key, field).Result()
 	if err != nil {
-		return result, err
+		log.GetLogger().Errorf("redisUtil.HGet err: err=[%+v]", err)
+		return ""
 	}
-	for i := 0; i < len(vkeys); i++ {
-		if values[i] == nil {
-			return result, KeyNotExist
-		}
-		result[vkeys[i]] = values[i].([]byte)
-	}
-	return result, nil
+	return res
 }
 
-func LPush(key string, args ...[]byte) (int64, error) {
-	if redisPool == nil {
-		panic(nil)
-	}
-	c := redisPool.Get()
-	defer c.Close()
-	vs := []interface{}{}
-	vs = append(vs, key)
-	for _, v := range args {
-		vs = append(vs, v)
-	}
-	reply, err := redis.Int64(c.Do("LPUSH", vs...))
-	return reply, err
-}
-
-func Increment(key string) error {
-	if redisPool == nil {
-		panic(nil)
-	}
-	c := redisPool.Get()
-	defer c.Close()
-	_, err := c.Do("INCR", key)
-	return err
-}
-
-func BRPop(queueName string) ([][]byte, error) {
-	if redisPool == nil {
-		return nil, redisNotInitErr
-	}
-	c := redisPool.Get()
-	defer c.Close()
-
-	reply, err := redis.ByteSlices(c.Do("BRPOP", queueName, 5))
+// HExists 判断key中有没有field域名
+func (ru redisUtil) HExists(key string, field string) bool {
+	res, err := ru.redis.HExists(context.Background(), RedisPrefix+key, field).Result()
 	if err != nil {
-		return nil, err
+		log.GetLogger().Errorf("redisUtil.HExists err: err=[%+v]", err)
+		return false
 	}
-	return reply, nil
+	return res
 }
 
-func Close() error {
-	if redisPool != nil {
-		err := redisPool.Close()
-		redisPool = nil
-		return err
+// HDel 删除hash表中的值
+func (ru redisUtil) HDel(key string, fields ...string) bool {
+	err := ru.redis.HDel(context.Background(), RedisPrefix+key, fields...).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.HDel err: err=[%+v]", err)
+		return false
 	}
-	fmt.Println("redis close done")
-	return nil
+	return true
+}
+
+// Exists 判断多项key是否存在
+func (ru redisUtil) Exists(keys ...string) int64 {
+	fullKeys := ru.toFullKeys(keys)
+	cnt, err := ru.redis.Exists(context.Background(), fullKeys...).Result()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Exists err: err=[%+v]", err)
+		return -1
+	}
+	return cnt
+}
+
+// Expire 指定缓存失效时间
+func (ru redisUtil) Expire(key string, timeSec int) bool {
+	err := ru.redis.Expire(context.Background(), RedisPrefix+key, time.Duration(timeSec)*time.Second).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Expire err: err=[%+v]", err)
+		return false
+	}
+	return true
+}
+
+// TTL 根据key获取过期时间
+func (ru redisUtil) TTL(key string) int {
+	td, err := ru.redis.TTL(context.Background(), RedisPrefix+key).Result()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.TTL err: err=[%+v]", err)
+		return 0
+	}
+	return int(td / time.Second)
+}
+
+// Del 删除一个或多个键
+func (ru redisUtil) Del(keys ...string) bool {
+	fullKeys := ru.toFullKeys(keys)
+	err := ru.redis.Del(context.Background(), fullKeys...).Err()
+	if err != nil {
+		log.GetLogger().Errorf("redisUtil.Del err: err=[%+v]", err)
+		return false
+	}
+	return true
+}
+
+// toFullKeys 为keys批量增加前缀
+func (ru redisUtil) toFullKeys(keys []string) (fullKeys []string) {
+	for _, k := range keys {
+		fullKeys = append(fullKeys, RedisPrefix+k)
+	}
+	return
 }
